--- a/FoodTrackApp/Base.lproj/Main.storyboard
+++ b/FoodTrackApp/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4WI-tA-q6p">
-                                <rect key="frame" x="10" y="40" width="365" height="96.5"/>
+                                <rect key="frame" x="10" y="20" width="365" height="96.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2DZ-6H-al7">
                                         <rect key="frame" x="0.0" y="0.0" width="86.5" height="20.5"/>
@@ -50,18 +50,22 @@
                                     <constraint firstAttribute="bottom" secondItem="N4G-04-aJp" secondAttribute="bottom" constant="546" id="mfR-LI-ouz"/>
                                 </constraints>
                             </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="iu0-1t-pDu">
+                                <rect key="frame" x="10" y="146" width="339" height="221"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4WI-tA-q6p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="2PL-8b-eGF"/>
-                            <constraint firstItem="4WI-tA-q6p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="2ej-fE-rlr"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4WI-tA-q6p" secondAttribute="trailing" id="8r1-Wc-1vS"/>
-                            <constraint firstItem="4WI-tA-q6p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9Iw-cw-2aO"/>
+                            <constraint firstItem="4WI-tA-q6p" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="2PL-8b-eGF"/>
+                            <constraint firstItem="4WI-tA-q6p" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="2ej-fE-rlr"/>
+                            <constraint firstAttribute="trailing" secondItem="4WI-tA-q6p" secondAttribute="trailing" id="8r1-Wc-1vS"/>
+                            <constraint firstItem="4WI-tA-q6p" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9Iw-cw-2aO"/>
                             <constraint firstAttribute="trailing" secondItem="4WI-tA-q6p" secondAttribute="trailing" id="VcU-wg-P36"/>
-                            <constraint firstItem="4WI-tA-q6p" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="hRq-6i-AJv"/>
-                            <constraint firstItem="4WI-tA-q6p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="nrV-0u-eDg"/>
+                            <constraint firstItem="4WI-tA-q6p" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="hRq-6i-AJv"/>
+                            <constraint firstItem="4WI-tA-q6p" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="nrV-0u-eDg"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="LRM-Zr-jAU"/>
                     </view>
                     <connections>
                         <outlet property="mealNameLabe" destination="2DZ-6H-al7" id="ezJ-hj-N8l"/>
@@ -73,4 +77,7 @@
             <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Image" width="637.79522705078125" height="637.79522705078125"/>
+    </resources>
 </document>
